--- a/src/index.html
+++ b/src/index.html
@@ -11,5 +11,19 @@
 </head>
 <body>
   <app-root></app-root>
+
+  <script src="https://www.gstatic.com/firebasejs/4.8.1/firebase.js"></script>
+  <script>
+    // Initialize Firebase
+    var config = {
+      apiKey: "AIzaSyAyig91aBe-1s6WqKt9VyESIt2Vg6L2W-8",
+      authDomain: "hoopbot-website.firebaseapp.com",
+      databaseURL: "https://hoopbot-website.firebaseio.com",
+      projectId: "hoopbot-website",
+      storageBucket: "hoopbot-website.appspot.com",
+      messagingSenderId: "1018558946881"
+    };
+    firebase.initializeApp(config);
+  </script>
 </body>
 </html>
