Added Analytics tag

--- a/src/index.html
+++ b/src/index.html
@@ -10,20 +10,29 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
-  <app-root></app-root>
+<app-root></app-root>
 
-  <script src="https://www.gstatic.com/firebasejs/4.8.1/firebase.js"></script>
-  <script>
-    // Initialize Firebase
-    var config = {
-      apiKey: "AIzaSyAyig91aBe-1s6WqKt9VyESIt2Vg6L2W-8",
-      authDomain: "hoopbot-website.firebaseapp.com",
-      databaseURL: "https://hoopbot-website.firebaseio.com",
-      projectId: "hoopbot-website",
-      storageBucket: "hoopbot-website.appspot.com",
-      messagingSenderId: "1018558946881"
-    };
-    firebase.initializeApp(config);
-  </script>
+<script src="https://www.gstatic.com/firebasejs/4.8.1/firebase.js"></script>
+<script>
+  // Initialize Firebase
+  var config = {
+    apiKey: "AIzaSyAyig91aBe-1s6WqKt9VyESIt2Vg6L2W-8",
+    authDomain: "hoopbot-website.firebaseapp.com",
+    databaseURL: "https://hoopbot-website.firebaseio.com",
+    projectId: "hoopbot-website",
+    storageBucket: "hoopbot-website.appspot.com",
+    messagingSenderId: "1018558946881"
+  };
+  firebase.initializeApp(config);
+</script>
+
+<!-- Adsense -->
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+  (adsbygoogle = window.adsbygoogle || []).push({
+    google_ad_client: "ca-pub-6765621314782185",
+    enable_page_level_ads: true
+  });
+</script>
 </body>
 </html>
