--- a/src/index.html
+++ b/src/index.html
@@ -34,5 +34,17 @@
     enable_page_level_ads: true
   });
 </script>
+
+<!-- Google Analytics -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-113291139-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-113291139-1');
+</script>
+
 </body>
 </html>
